--- a/ASPNetCoreWebProject/Views/Home/Index.cshtml
+++ b/ASPNetCoreWebProject/Views/Home/Index.cshtml
@@ -2,7 +2,30 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<form asp-controller="Account" asp-action="Logout" method="post">
+    <button type="submit" class="btn btn-danger">Đăng xuất</button>
+</form>
+
+
+@if (User.Identity.IsAuthenticated)
+{
+    <p>Hello, @User.Identity.Name!</p>
+
+    @if (User.IsInRole("Customer"))
+    {
+        <div class="text-center">
+            <h1 class="display-4">Bạn là customer</h1>
+            <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+        </div>
+
+    }
+    @if (User.IsInRole("Shipper"))
+    {
+        <div class="text-center">
+            <h1 class="display-4">Bạn là shipper</h1>
+            <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+        </div>
+
+    }
+}
+
