--- a/ASPNetCoreWebProject/Views/Shared/_Layout.cshtml
+++ b/ASPNetCoreWebProject/Views/Shared/_Layout.cshtml
@@ -18,12 +18,23 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                    <ul class="navbar-nav flex-grow-1 justify-content-between">
+                        <li class="nav-item d-inline-flex">
+                            <div >
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Trang chủ</a>
+                            </div>
+                            <div>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Chính sách bảo mật</a>
+                            </div>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        <li class="nav-item d-inline-flex">
+                            <div class="align-items-center d-flex me-3">
+                                <p class="m-0 text-center">Hello, @User.Identity.Name!</p>
+                            </div>
+
+                            <form asp-controller="Account" asp-action="Logout" method="post">
+                                <button type="submit" class="btn btn-danger">Đăng xuất</button>
+                            </form>
                         </li>
                     </ul>
                 </div>
@@ -38,7 +49,8 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - ASPNetCoreWebProject - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2025 - ASPNetCoreWebProject 
+            @* - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> *@
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
